Fix inverted binding
Signed-off-by: Olivier Tilmans <olivier.tilmans@uclouvain.be>

--- a/src/app/screen.component.html
+++ b/src/app/screen.component.html
@@ -1,9 +1,9 @@
 <div class="outerScreen" (click)="toggleFS()">
   <div class="screenBorder"
-    [ngStyle]="(this.screenService.activeScreen | async) ||  {
+    [ngStyle]="(this.screenService.dimension | async) ||  {
                 'width.px': 1024, 'height.px': 720, 'top': 0, 'left': 0,
                 'background': 'black' }"
-    [ngSwitch]="(this.screenService.dimension | async) || 'sponsors'">
+    [ngSwitch]="(this.screenService.activeScreen?.activeScreen | async) || 'sponsors'">
     <site-walk-view *ngSwitchCase="site-walk"></site-walk-view>
     <start-view *ngSwitchCase="start"></start-view>
     <videofeed-view *ngSwitchCase="videofeed"></videofeed-view>
