--- a/src/app/select-screen.component.html
+++ b/src/app/select-screen.component.html
@@ -1,7 +1,11 @@
-<form #selectScreenForm="ngForm" (ngSubmit)="displayScreen(selectScreenForm)" class="screen-selection-form">
-  <md-input-container class="screen-selection-input">
-    <input mdInput required id="screenId" name="screenId" ngModel
-     placeholder="Enter the identifier of the screen to be displayed">
-  </md-input-container>
-  <button md-raised-button [disabled]="this.screenId === ''" type="submit">Display</button>
+<form #selectScreenForm="ngForm"
+  (ngSubmit)="displayScreen(selectScreenForm)"
+  class="screen-selection-form">
+  <md-select placeholder="Select the screen to be displayed"
+    [(ngModel)]="screenId" name="screenId">
+     <md-option *ngFor="let name of (chanList | async)?.screens" [value]="name">
+       {{ name }}
+     </md-option>
+  </md-select>
+  <button md-raised-button [disabled]="!this.screenId" type="submit">Display</button>
 </form>
