--- a/src/app/screen.component.css
+++ b/src/app/screen.component.css
@@ -7,4 +7,10 @@
 
 .screenBorder {
   position: absolute;
+  /* Will be updated at a later time through ngStyle hooks */
+  width: 1024px;
+  height: 720px;
+  top: 0px;
+  left: 0px;
+  background: black;
 }
