--- a/src/app/views/site-walk-view.component.css
+++ b/src/app/views/site-walk-view.component.css
@@ -1,10 +1,23 @@
 .imgContainer {
   overflow: hidden;
+  width: 100%;
+  height: 100%;
 }
 
 .imgContainer img {
-  position: absolute;
+  /* position: absolute; */
   -moz-transition: all 1s ease-out;
   -webkit-transition: all 1s ease-out;
   transition: all 1s ease-out;
+}
+
+.legend {
+  position: absolute;
+  z-index: 1000;
+  color: #009900;
+  text-align: center;
+  text-shadow: 5px 5px #006600;
+  margin-top: 50%;
+  font-size: 300%;
+  width: 100%;
 }
