--- a/src/app/views/site-walk-view.component.html
+++ b/src/app/views/site-walk-view.component.html
@@ -1,5 +1,5 @@
 <div class="imgContainer">
-  <span class="legend">{{ view.legend }}</span>
-  <img [src]="'http://' + prefix + 'images/plan_2017.jpg'"
+  <!-- <span class="legend">{{ view.legend }}</span> -->
+  <img [src]="'http://' + prefix + 'images/plan_2017.png'"
        [style]="view.style" />
 </div>
