--- a/src/app/views/sponsors-view.component.css
+++ b/src/app/views/sponsors-view.component.css
@@ -1,3 +1,29 @@
 img {
-    object-fit: contain;
+  display: block;
+  max-width: 100%;
+  max-height: 100%;
+  position: absolute;
+}
+
+.landscape {
+  width: 100%;
+  height: auto;
+  top: 0;
+  bottom: 0;
+  margin: auto;
+}
+
+.portrait {
+  width: auto;
+  height: 100%;
+  left: 0;
+  right: 0;
+  margin: auto;
+}
+
+.surrounding {
+  width: 100%;
+  height: 100%;
+  z: -1;
+  position: absolute;
 }
