--- a/src/styles.css
+++ b/src/styles.css
@@ -1,7 +1,10 @@
 @import '~@angular/material/prebuilt-themes/indigo-pink.css';
+@import url(https://fonts.googleapis.com/css?family=Open+Sans);
 
 body {
     padding: 0;
     margin: 0;
     background:lightgray;
+    font-family: "Open Sans",  Impact;
+    font-weight: 800;
 }
